# gem-suite

./: .gitignore  Cargo.toml  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: build-and-release.yml  publish-to-pypi.yml  tests.yml
examples/: 01_gem_benchmark.ipynb
gem_suite/: __init__.py  analysis.py  experiments.py  gem_core.pyi  plaquettes.py  plot_utils.py
gem_suite.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
gem_suite/sub_analysis/: __init__.py  magnetization.py  operators.py
src/: graph.rs  heavyhex.rs  heavyhex_decode.rs  lib.rs  mock.rs  plaquette_model.rs  utils.rs
src/heavyhex/: decoding.rs  graph_builder.rs  simple_cycle.rs  visualization.rs
tests/: __init__.py  test_analysis.py  test_circuits.py  utils.py
