[package]
name = "gem_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "gem_core"
crate-type = ["cdylib"]

[dependencies]
thiserror = "1.0"
bitvec = "1.0.1"
ahash = "0.8.6"
hashbrown = "0.14.3"
indexmap = { version = ">=1.9, <3", features = ["rayon"] }
rayon = "1.10"
petgraph = "0.6.5"
lazy_static = "1.4"
itertools = "0.13.0"
fusion-blossom = "0.2.10"

[dependencies.pyo3]
version = "0.21.2"
features = ["extension-module", "hashbrown"]
