[build-system]
requires = ["setuptools", "wheel", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "gem-suite"
description = "Qiskit Experiments suite for generation of entanglement using measurements."
version = "0.2.0"
requires-python = ">= 3.8"
authors = [
  {name = "Naoki Kanazawa", email = "knzwnao@jp.ibm.com"},
]
dependencies = [
    "pymatching",
    "qiskit >= 1.0",
    "qiskit-experiments >= 0.7",
    "qiskit-ibm-runtime",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["gem_suite", "gem_suite.*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 105
src = ["gem_suite", "setup.py", "tests"]
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "UP",  # pyupgrade
    "PYI", # flake8-pyi
    "Q",   # flake8-quotes
]

[tool.ruff.lint.per-file-ignores]
"*.pyi" = ["F403", "F405", "PYI001", "PYI002"]
